--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,45 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="maincontent">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button
+        ion-item
+        (click)="onLoad('SignInPage')"
+        *ngIf="!isAuth"
+      >
+        <ion-icon name="person" item-left></ion-icon>
+        Sign In
+      </button>
+      <button
+        ion-item
+        (click)="onLoad('SignUpPage')"
+        *ngIf="!isAuth"
+      >
+        <ion-icon name="person-add" item-left></ion-icon>
+        Sign Up
+      </button>
+      <button
+        ion-item
+        (click)="onLoad('SpellsPage')"
+        *ngIf="isAuth"
+      >
+        <ion-icon name="flash" item-left></ion-icon>
+        Spells
+      </button>
+      <button
+        ion-item
+        (click)="signOut()"
+        *ngIf="isAuth"
+      >
+        <ion-icon name="person" item-left></ion-icon>
+        Sign Out
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #maincontent [root]="rootPage"></ion-nav>
