--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,7 +24,7 @@
       </button>
       <button
         ion-item
-        (click)="onLoad('SpellsPage')"
+        (click)="onLoad('SpellListPage')"
         *ngIf="isAuth"
       >
         <ion-icon name="flash" item-left></ion-icon>
