Spell adding and reading implemented

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,6 +24,14 @@
       </button>
       <button
         ion-item
+        (click)="onLoad('CreateSpellPage')"
+        *ngIf="isAuth"
+      >
+        <ion-icon name="add" item-left></ion-icon>
+        Create New Spell
+      </button>
+      <button
+        ion-item
         (click)="onLoad('SpellListPage')"
         *ngIf="isAuth"
       >
